Updated REST connection

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h2>
             Categories
         </h2>
-        <form>
+        <form action="data/rest.php">
             <fieldset class="form-group">
                 <label>
                     Category
