--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h2>
             Categories
         </h2>
-        <form action="data/addActivity.php" method="POST">
+        <form action="data/addActivity.php" method="post">
             <fieldset class="form-group">
                 <label>
                     Category
