Added first API structure

--- a/index.html
+++ b/index.html
@@ -59,5 +59,7 @@
                 Add Activity
             </button>
         </form>
+        <h2>Your Recent Activity</h2>
+        <div id="recentActivities"></div>
     </body>
 </html>
